--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,15 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
-      *{
+
+      * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
+      }
+
+      html, body {
+        height: 100%; overflow: hidden;
       }
     </style>
   </head>
